<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0F9D58"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>


    <!-- Button to view favorite locations -->

    <!-- RecyclerView to display favorite locations -->
    <Button
        android:id="@+id/btnViewFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View Favorite Locations" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavoriteLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myToolbar"/>

</LinearLayout>
