...

    <string name="sun_help1">How to use:</string>
    <string name="sun_help2"><![CDATA[
1. This is a program that provides a query for sunrise and sunset by longitude and latitude information.\n
2. Input the longitude and dimension information you need to query in the search box (the valid range of latitude and longitude is from -180 degrees to +180 degrees longitude, and the latitude is about -85 degrees to +85 degrees.)\n
3. Click the "Lookup" button to view the sunrise and sunset times at the query address.\n
4. Click the "save" icon in the menu to save the query address to the saved list.\n
5. Click "Delete" icon to delete the saved list.

    ]]></string>

    <!--Recipe-->
    <string name="save">save</string>
...
        \n6. To remove a recipe, select it and choose the Remove button.
        \n7. The toolbar provide access to Sun page, Receipe page, Dictionary page and Song page.
        \n8. Each page click the return will back to the previous page.
        \n9. For more help, you can contact support.</string>

    <string name="rc_Title">Recipes</string>
    <string name="rc_Details">Details</string>
    <string name="recipeTitle">Recipe Title</string>
    <string name="summary">Recipe Summary</string>
    <string name="instruction">Recipe Instructions</string>
    <string name="emptyText">No Result,please search or add item to favorite</string>
    <string name="time">time</string>

...
